welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: Missing closing brace `}' assumed here
def flower(c:Color) {
^