welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def flower(c:Color) {
	
def move(nbPas : Int, versLAvant : Boolean) {
	for (pas <- 1 to nbPas) {
		if (versLAvant) {
			avance();
		} else { 
			recule();
		}
	}
}
def growFlowers() {
	move(3,true)
	droite();
	move(2,true)
}